force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/ICS_AVM_Content_Ingestion_Status__c.object-meta.xml
<CustomObject>
    <description>This object is created to keep track on the Content Ingestion Status</description>
    <label>ICS AVM Content Ingestion Status</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Content Ingestion Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICS AVM Content Ingestion Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>