force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>