force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Avamo_Ingest_Status__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Avamo_Ingest_Status__c</fullName>
    <label>Avamo Ingest Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>