force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Chunks__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Chunks__c</fullName>
    <label>Chunks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>