force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Knowledge_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>ICS AVM Content Ingestion Statuses</relationshipLabel>
    <relationshipName>ICS_AVM_Content_Ingestion_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>