force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Knowledge_Article_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Knowledge Article Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>