force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Reason_For_Status__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Reason_For_Status__c</fullName>
    <label>Sync Reason For Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>