force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Status_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Status_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Status Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>