force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/ICS_AVM_Sync_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_Sync_Date_Time__c</fullName>
    <label>Sync Date Time</label>
    <type>DateTime</type>
</CustomField>