force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/fields/No_Sync_after_last_update__c.field-meta.xml
<CustomField>
    <fullName>No_Sync_after_last_update__c</fullName>
    <formula>ICS_AVM_Knowledge_Article__r.LastPublishedDate &gt;  ICS_AVM_Sync_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Sync after last update</label>
    <type>Checkbox</type>
</CustomField>