force-app/main/default/objects/ICS_AVM_Content_Ingestion_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ICS_AVM_Knowledge_Article__c</columns>
    <columns>ICS_AVM_Sync_Date_Time__c</columns>
    <columns>ICS_AVM_Reason_For_Status__c</columns>
    <columns>ICS_AVM_Sync_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>